# ludum_52_harvest

./: Cargo.toml  README.md  TODO  TODO.md  index.html
.github/workflows/: static.yml
assets/: baseiconv1.aseprite  buggyiconv1.aseprite  buggyv3.aseprite  centericonv1.aseprite  centericonv1green.aseprite  centericonv1yellow.aseprite  centericonv2.aseprite  centerv1.aseprite  iconcenter3.aseprite  iconharvest1.aseprite  shipiconv1.aseprite  spritebutton2.aseprite  spritecenter1.aseprite  spriteendbad.aseprite  spriteendgood.aseprite  spriteharvester1.aseprite  spritemap3.aseprite  spritemap5.aseprite  spritepanel8.aseprite  spritestart.aseprite
assets/placeholders/: terrain.aseprite
src/: buggy.rs  finish.rs  harvester.rs  lose.txt  main.rs  panel.rs  start.rs  start_text.txt  terrain.rs  tooltip.rs  util.rs  win.txt
