[package]
name = "ludum_52_harvest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asefile = "0.3.5"
bevy = "0.9.1"
bevy_rapier2d = "0.19.0"
image = "0.24.5"
old_image = {package="image", version="0.23.14"}
once_cell = "1.17.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
